// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`messages - calculate diff when new messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 3,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551942228,
    "message": "This is a message with id 3",
    "spent": "0.32",
  },
  Immutable.ReceivedMessage {
    "id": 4,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551935028,
    "message": "This is a message with id 4",
    "spent": "0.32",
  },
]
`;

exports[`messages - calculate diff when new messages but some were already seen 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 3,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551942228,
    "message": "This is a message with id 3",
    "spent": "0.32",
  },
]
`;

exports[`messages - calculate diff when no new messages 1`] = `Immutable.List []`;

exports[`messages - calculate diff when no previous messages 1`] = `
Immutable.List [
  Immutable.ReceivedMessage {
    "id": 0,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551963828,
    "message": "This is a message with id 0",
    "spent": "0.32",
  },
  Immutable.ReceivedMessage {
    "id": 1,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551956628,
    "message": "This is a message with id 1",
    "spent": "0.32",
  },
  Immutable.ReceivedMessage {
    "id": 2,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551949428,
    "message": "This is a message with id 2",
    "spent": "0.32",
  },
  Immutable.ReceivedMessage {
    "id": 3,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551942228,
    "message": "This is a message with id 3",
    "spent": "0.32",
  },
  Immutable.ReceivedMessage {
    "id": 4,
    "type": 1,
    "sender": Immutable.MessageSender {
      "replyTo": "zs1dhqp9dtr4pksnmaynp2k22qduvywejg3neqq4swd4a6gnz6w0m208kefcdm9n2067yn5clcvgsq",
      "username": "Mars",
    },
    "createdAt": 1551935028,
    "message": "This is a message with id 4",
    "spent": "0.32",
  },
]
`;

exports[`messages - calculate diff when some messages disappeared 1`] = `Immutable.List []`;

exports[`messages - message to transfer creates transfer from simple message 1`] = `
Object {
  "createdAt": 1551963828,
  "message": "This is some message [object Object]",
  "sender": Object {
    "replyTo": "zs1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngh9slya",
  },
  "type": 1,
}
`;

exports[`messages - transfer to message when memo isn't compressed string 1`] = `Array []`;

exports[`messages - transfer to message when on testnet 1`] = `
Object {
  "createdAt": 1551963828,
  "id": "test-id",
  "message": "This is some message test-id",
  "sender": Object {
    "replyTo": "ztestsapling1z7rejlpsa98s2rrrfkwmaxu53e4ue0ulcrw0h4x5g8jl04tak0d3mm47vdtahatqrlkngljzurf",
  },
  "spent": "234.56",
  "type": 1,
}
`;
